Fix cart icon visibility

--- a/src/index.css
+++ b/src/index.css
@@ -156,9 +156,9 @@ footer {
     color: rgba(121, 141, 210, 1) !important;
     background-color: rgba(244, 245, 241, 0.8) !important;
     border: 1px solid rgba(105, 124, 193, 1) !important;
-    width: 3rem;
-    height: 3rem;
-    position: relative;
+    width: 3rem !important;
+    height: 3rem !important;
+    position: relative !important;
 }
 
 .shopping-cart:hover {
@@ -168,8 +168,8 @@ footer {
 }
 
 .cart-num-image {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 1.5rem !important;
+    height: 1.5rem !important;
 }
 
 .about-bg {
@@ -239,12 +239,12 @@ footer {
         max-width: 95px;
     }
     .shopping-cart {
-        width: 42px;
-        height: 42px;
+        width: 42px !important;
+        height: 42px !important;
     }
     .cart-num-image {
-        width: 20px;
-        height: 20px;
+        width: 20px !important;
+        height: 20px !important;
     }
 }
 
